--- a/pages/pomodoro.html
+++ b/pages/pomodoro.html
@@ -15,8 +15,8 @@
         <ul class="nav_links">
             <li><a class="active" href="/index.html">Home</a></li>
             <li><a href="/pages/pomodoro.html">Pomodoro</a></li>
-            <li><a href="#Melody">Melody</a></li>
-            <li><a href="#Flashcards">Flashcards</a></li>
+            <li><a href="/pages/melody.html">Melody</a></li>
+            <li><a href="/pages/Flashcard.html">Flashcards</a></li>
            
         </ul>
     </nav>
