--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="" alt="">
+        <img class="logo" src="/assets/logo_transparent.png" alt="">
      <nav>
         <ul class="nav_links">
             <li><a class="active" href="/index.html">Home</a></li>
@@ -19,7 +19,7 @@
            
         </ul>
     </nav>
-    <a class="cta" href="#contact"><button>Contact</button></a>
+    <a class="cta" href="#login"><button>login</button></a>
 </header>
 
     <div class="home">
@@ -33,7 +33,7 @@
         </div>
 
         <div class="imghome">
-            <img class="study" src="/assests/study.jpg" alt="">
+            <img class="study" src="/assets/study.jpg" alt="">
         </div>
     </div>
 
