--- a/pages/melody.html
+++ b/pages/melody.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Educare</title>
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
     <header>
-        <img class="logo" src="" alt="">
+        <img class="logo" src="/assets/logo_transparent.png" alt="">
      <nav>
         <ul class="nav_links">
             <li><a class="active" href="/index.html">Home</a></li>
@@ -19,7 +19,7 @@
            
         </ul>
     </nav>
-    <a class="cta" href="#contact"><button>Contact</button></a>
+    <a class="cta" href="#login"><button>login</button></a>
 </header>
 
 
