--- a/pages/melody.html
+++ b/pages/melody.html
@@ -32,7 +32,7 @@
         </div>  
         
 
-    <a class="cta" href="#login"><button>login</button></a>
+        <a class="cta" href="/pages/login.html"><button>login</button></a>
 </header>
 
 
