--- a/pages/calc.html
+++ b/pages/calc.html
@@ -35,7 +35,7 @@
         </div>  
         
 
-    <a class="cta" href="#login"><button>login</button></a>
+        <a class="cta" href="/pages/login.html"><button>login</button></a>
 </header>
 
     <div class="container">
