--- a/pages/register.html
+++ b/pages/register.html
@@ -33,7 +33,7 @@
         </div>  
         
 
-    <a class="cta" href="#login"><button>login</button></a>
+        <a class="cta" href="/pages/login.html"><button>login</button></a>
 </header>
 
 <div class="reg"></div>
