--- a/pages/speechText.html
+++ b/pages/speechText.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Currency Converter in Javascript</title>
+    <title>Edutech</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
