--- a/pages/login.html
+++ b/pages/login.html
@@ -24,7 +24,7 @@
       
      
         <div class="dropdown"> 
-            <button class="dropdown-button">Dropdown</button> 
+            <button class="dropdown-button">Special</button> 
             <div class="dropdown-list"> 
                 <a href="/pages/speechText.html">Speech to text</a> 
                 <a href="/pages/TextSpeech.html">Text to speech</a> 
