--- a/pages/TextSpeech.html
+++ b/pages/TextSpeech.html
@@ -3,7 +3,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">  
-    <title>Text To Speech in JavaScript | CodingNepal</title>
+    <title>Educare</title>
     <link rel="stylesheet" href="/pages/TextSpeech.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
